Move client app to a separate directory.

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -20,7 +20,7 @@
         </script>
 
         <script defer src="/static/js/utils.js"></script>
-        <script defer src="/static/js/bundle.js"></script>
+        <script defer src="/app/bundle.js"></script>
     </head>
 
 <body class="theme-6dd">
