--- a/client/app/index.html
+++ b/client/app/index.html
@@ -10,10 +10,10 @@
 
         <title>Plebeian Market</title>
 
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+
         <link rel="stylesheet" href="/static/css/naringu.css">
         <link rel="stylesheet" href="/static/css/style.css">
-
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 
         <script>
             var API_URL = "/api";
@@ -23,7 +23,7 @@
         <script defer src="/app/bundle.js"></script>
     </head>
 
-<body class="theme-6dd">
+<body class="theme-plebeian-dark">
     <input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
 
     <div class="sidebar" id="sidebar">
@@ -47,7 +47,7 @@
         <div class="masthead">
             <div class="container">
                 <h3 class="masthead-title">
-                    <a href="/" title="Home">Plebeian Market</a>
+                    <a href="/app/" title="Home">Plebeian Market</a>
                     <small>⚡️ The truly self-sovereign web3 marketplace.</small>
                 </h3>
             </div>
