Styling the auctions page.

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -5,40 +5,19 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
-        <!-- Enable responsiveness on mobile devices-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
         <title>Plebeian Market</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 
-        <link rel="stylesheet" href="/static/css/naringu.css">
         <link rel="stylesheet" href="/static/css/style.css">
 
         <script defer src="/static/js/utils.js"></script>
         <script defer src="/app/bundle.js"></script>
     </head>
 
-<body class="theme-plebeian-dark">
-    <input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
-
-    <div class="sidebar" id="sidebar">
-        <div class="sidebar-item">
-            <img width="125" height="125" src="/static/images/logo.jpg">
-            <p>The market of the free people</p>
-        </div>
-
-        <nav class="sidebar-nav">
-            <a class="sidebar-nav-item active" href="/">Home</a>
-            <a class="sidebar-nav-item" target="_blank" href="https://github.com/PlebeianMarket">GitHub</a>
-            <a class="sidebar-nav-item" target="_blank" href="https://twitter.com/PlebeianMarket">Twitter</a>
-        </nav>
-
-        <div class="sidebar-item">
-            <p>&copy; 2022, <a href="https://plebeian.technology/">Plebeian Technology</a>. Some rights reserved.</p>
-        </div>
-    </div>
-
+<body class="theme-plebeian-dark layout-reverse">
     <div class="wrap">
         <div class="masthead">
             <div class="container">
