--- a/client/app/index.html
+++ b/client/app/index.html
@@ -1,36 +1,9 @@
 <!DOCTYPE html>
-
-<html lang="en-us">
+<html>
     <head>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta http-equiv="content-type" content="text/html; charset=utf-8">
-
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-
-        <title>Plebeian Market</title>
-
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-
-        <link rel="stylesheet" href="/static/css/style.css">
-
-        <script defer src="/static/js/utils.js"></script>
-        <script defer src="/app/bundle.js"></script>
+        <meta http-equiv="refresh" content="0; url='/app/seller/'" />
     </head>
-
-<body class="theme-plebeian-dark layout-reverse">
-    <div class="wrap">
-        <div class="masthead">
-            <div class="container">
-                <h3 class="masthead-title">
-                    <a href="/app/" title="Home">Plebeian Market</a>
-                    <small>⚡️ The truly self-sovereign web3 marketplace.</small>
-                </h3>
-            </div>
-        </div>
-
-        <div id="svelte-app" class="container content">
-
-        </div>
-    </div>
-</body>
+    <body>
+        <p>Please <a href="/app/seller/">continue</a> as a seller.</p>
+    </body>
 </html>
