--- a/client/app/buyer/index.html
+++ b/client/app/buyer/index.html
@@ -3,8 +3,8 @@
     <head>
     </head>
     <body>
-        <link rel="stylesheet" href="/static/css/common.css">
-        <script defer src="/app/buyer/bundle.js"></script>
         <div id="plebeian-auction"></div>
+        <link rel="stylesheet" href="/static/css/common.css">
+       <script src="/app/buyer/bundle.js"></script>
     </body>
 </html>
