--- a/client/app/seller/index.html
+++ b/client/app/seller/index.html
@@ -1,36 +1,19 @@
 <!DOCTYPE html>
 
 <html lang="en-us">
-    <head>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
-        <title>Plebeian Market</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+    <title>Plebeian Market</title>
 
-        <link rel="stylesheet" href="/static/css/common.css">
-        <link rel="stylesheet" href="/static/css/style.css">
+    <link href="/static/style.css" rel="stylesheet">
+    <script defer src="/app/seller/bundle.js"></script>
+</head>
 
-        <script defer src="/app/seller/bundle.js"></script>
-    </head>
+<body class="bg-white dark:bg-slate-800 h-screen"></body>
 
-<body class="theme-plebeian-dark layout-reverse">
-    <div class="wrap">
-        <div class="masthead">
-            <div class="container">
-                <h3 class="masthead-title">
-                    <a href="/app/" title="Home">Plebeian Market</a>
-                    <small>⚡️ The truly self-sovereign web3 marketplace.</small>
-                </h3>
-            </div>
-        </div>
-
-        <div id="svelte-app" class="container content">
-
-        </div>
-    </div>
-</body>
 </html>
