Styling buyer app.

--- a/client/app/buyer/index.html
+++ b/client/app/buyer/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
     </head>
-    <body>
+    <body class="bg-white dark:bg-slate-800 h-screen">
+        <link href="/static/style.css" rel="stylesheet">
         <div id="plebeian-auction"></div>
-        <link rel="stylesheet" href="/static/css/common.css">
         <script src="/app/buyer/bundle.js"></script>
     </body>
 </html>
