campaign page image

--- a/web/src/app.html
+++ b/web/src/app.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="%sveltekit.assets%/images/new-logo.svg"
-      type="image/svg+xml"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon-16x16.png"
+      href="%sveltekit.assets%/images/favicon.ico"
     />
+
     <meta
       id="viewport"
       name="viewport"
