--- a/web/src/app.html
+++ b/web/src/app.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/images/logo.svg" type="image/svg+xml" />
-		<meta id="viewport" name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,initial-scale=1,user-scalable=no" />
-		%sveltekit.head%
-	</head>
-	<body>
-		%sveltekit.body%
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%sveltekit.assets%/images/favicon.ico"
+    />
+
+    <meta
+      id="viewport"
+      name="viewport"
+      content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,initial-scale=1,user-scalable=no"
+    />
+    %sveltekit.head%
+  </head>
+  <body>
+    %sveltekit.body%
+  </body>
 </html>
