--- a/web/src/app.html
+++ b/web/src/app.html
@@ -17,6 +17,8 @@
     %sveltekit.head%
   </head>
   <body>
-    %sveltekit.body%
+    <div style="display: contents">
+      %sveltekit.body%
+    </div>
   </body>
 </html>
